# nicegui-demo

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: auth.py
crud/: user.py
database/: base.py  test.db
models/: user.py
pages/: login.py  register.py
